--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -1,6 +1,9 @@
+[install]
+installCommand = "npm ci"
+
 [build]
-builder = "nixpacks"
-buildCommand = "npm ci && npm run build"
+builder = "railpack"
+buildCommand = "npm run build"
 
 [deploy]
 startCommand = "npm run start"
